# dvdrental_as_delta_table

./: README.md  pyproject.toml
delta_table_creator/: delta_spark_util.py
spark-warehouse/actor/: .part-00000-1aeff75f-3fb3-471e-909f-75903f1fa05e-c000.snappy.parquet.crc  .part-00000-4c995d04-76a2-4d58-9bb6-a8873d560f8c-c000.snappy.parquet.crc  .part-00000-c7f13a06-6029-4d30-940d-27ebe6a50ff7-c000.snappy.parquet.crc  part-00000-4c995d04-76a2-4d58-9bb6-a8873d560f8c-c000.snappy.parquet  part-00000-89820df5-8758-45aa-8707-a914469f383c-c000.snappy.parquet  part-00000-c7f13a06-6029-4d30-940d-27ebe6a50ff7-c000.snappy.parquet
spark-warehouse/address/: .part-00000-977b8abf-0973-43a0-9425-072d65bda68d-c000.snappy.parquet.crc  .part-00000-ba6c50c5-96c6-4dc6-ac10-a507961b0ee7-c000.snappy.parquet.crc  part-00000-977b8abf-0973-43a0-9425-072d65bda68d-c000.snappy.parquet  part-00000-ba6c50c5-96c6-4dc6-ac10-a507961b0ee7-c000.snappy.parquet
spark-warehouse/category/: .part-00000-d521302c-001c-42a0-b02f-fa0e79b3506e-c000.snappy.parquet.crc  part-00000-d521302c-001c-42a0-b02f-fa0e79b3506e-c000.snappy.parquet
spark-warehouse/city/: .part-00000-36a132e8-0f83-48c9-a8db-274813767714-c000.snappy.parquet.crc  part-00000-36a132e8-0f83-48c9-a8db-274813767714-c000.snappy.parquet
spark-warehouse/country/: .part-00000-2222b216-07f8-4068-a64e-4982a666e53f-c000.snappy.parquet.crc  part-00000-2222b216-07f8-4068-a64e-4982a666e53f-c000.snappy.parquet
spark-warehouse/customer/: .part-00000-f2f4d8d2-c926-4926-ab55-f10f47137c20-c000.snappy.parquet.crc  (+1 more)
(+38 files in other folders)
